[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-master"
version = "0.1.0"
description = "Master library of reusable LLM tools with pluggable executors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tool Master Team"}
]
keywords = ["llm", "tools", "agents", "ai", "openai", "anthropic", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.18",
]
langchain = [
    "langchain-core>=0.1",
]
# Tool-specific dependencies
weather = [
    "httpx>=0.24",
]
wikipedia = [
    "httpx>=0.24",
]
finance = [
    "yfinance>=0.2",
]
google = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
currency = [
    "httpx>=0.24",
]
dictionary = [
    "httpx>=0.24",
]
translation = [
    "httpx>=0.24",
]
geocoding = [
    "httpx>=0.24",
]
url = [
    "httpx>=0.24",
]
news = [
    "httpx>=0.24",
]
text-analysis = [
    "langdetect>=1.0.9",
    "textblob>=0.17.1",
]
all = [
    "tool-master[dev,openai,anthropic,langchain,weather,wikipedia,finance,google,currency,dictionary,translation,geocoding,url,news,text-analysis]",
]

[project.urls]
Homepage = "https://github.com/yourusername/tool-master"
Documentation = "https://github.com/yourusername/tool-master#readme"
Repository = "https://github.com/yourusername/tool-master"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
